# fiap_techchallenge01

./: .gitignore  .gitmodules  README.md  app.py  hello.qmd
lives/live00/: pyproject.toml
tech_challenge_fase01/wineData/: info_vinhos_copilot.md  pyproject.toml  run-jupyter.sh
tech_challenge_fase01/wineData/.virtual_documents/src/: wineDataAnalysis-polars.ipynb
tech_challenge_fase01/wineData/data/: Cópia de EXP_VINHO_2000_2022_20231118_mensal.gsheet  EXP_VINHO_2000_2022_20231118 (1).xlsx  EXP_VINHO_2000_2022_20231118 (2).xlsx  EXP_VINHO_2000_2022_20231118_anual.csv  EXP_VINHO_2000_2022_20231118_mensal.csv  EXP_VINHO_2000_2022_20231118_mensal.gsheet  grapes-production.csv  uva-valor-da-produo-2022.csv  uva-valor-da-produo-mil-reais_RS.csv  world_wine_organization.xlsx
tech_challenge_fase01/wineData/data/.ipynb_checkpoints/: countries_names-checkpoint.csv
tech_challenge_fase01/wineData/data/cpi_brazil_us/: API_FP.CPI.TOTL_DS2_en_csv_v2_5994751.csv  CPIAUCSL_monthly.csv  CPI_monthly.csv  SeriesReport-20231126152340_dd6e19.xlsx  cpi_series.csv  cpi_us_oecd.csv  news-release-table1-202310.xlsx
tech_challenge_fase01/wineData/data/dadosclima/: dados_A840_M_2006-11-30_2022-12-31.csv
tech_challenge_fase01/wineData/src/: .RData  Untitled.ipynb  _quarto.yml  main.py  playground.ipynb  report.html  wineData.qmd  wineDataAnalysis-polars.ipynb  wineDataAnalysis_polars.ipynb
tech_challenge_fase01/wineData/src/.ipynb_checkpoints/: playground-checkpoint.ipynb  wineDataAnalysis-polars-checkpoint.ipynb  wineDataAnalysis_polars-checkpoint.ipynb
tech_challenge_fase01/wineData/src/.virtual_documents/: wineDataAnalysis_pandas.ipynb
tech_challenge_fase01/wineData/src/rbook/: .gitignore  _publish.yml  _quarto.yml  analise.R  analysis.qmd  conclusion.qmd  context.qmd  custom.scss  data_exp_mc.RData  data_exp_mc_by_date_clean.RData  data_exp_yc.RData  exogenous.qmd  exploratory_monthly.qmd  exploratory_yearly.qmd  explore.qmd  hello-extendr.R  index.qmd  main.html  tsanalysis-top5.qmd  tsanalysis.qmd  tsanalysistop.qmd  utils.R
tech_challenge_fase01/wineData/src/rbook/docs/: conclusion.html  context.epub  context.html  exogenous.epub  exogenous.html  explore.epub  explore.html  index.epub  index.html  robots.txt  search.json  sitemap.xml  tsanalysis.epub  tsanalysis.html  tsanalysistop.epub  tsanalysistop.html
tech_challenge_fase01/wineData/src/streamlit_app/: Wine_in_Data.py
tech_challenge_fase01/wineData/src/streamlit_app/pages/: 2_Análise_Exploratória.py  (+2 more)
(+367 files in other folders)
