[tool.poetry]
name = "lives"
version = "0.1.0"
description = ""
authors = ["carlos@juno <carlos.vneves@gmail.com>"]
readme = "README.md"
packages = [{include = "lives", from = "src"}]

[tool.poetry.dependencies]
python = ">3.11,<3.13"
pandas = "^2.1.2"
polars = "^0.19.11"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
pyarrow = "^13.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
