[tool.poetry]
name = "winedata"
version = "0.1.0"
description = ""
authors = ["Your  <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
polars = ">=0.19.10"
pandas = ">=2.1.1"
jupyter = ">=1.0.0"
notebook = ">=7.0.6"
plotly = ">=5.17.0"
pyarrow = ">=13.0.0"
statsmodels = ">=0.14.0"
seaborn = ">=0.13.0"
scikit-learn = ">=1.2.2"
matplotlib = ">=3.7.1"
itables = ">=0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
