[tool.poetry]
name = "winedata"
version = "0.1.0"
description = "Tech Challenge 01- 3DTAT - Produção de Vinhos"
authors = ["Carlos Eduardo Veras Neves  <carlos.vneves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
polars = ">=0.19.10"
pandas = ">=2.1.1"
plotly = ">=5.17.0"
pyarrow = ">=13.0.0"
statsmodels = ">=0.14.0"
seaborn = ">=0.13.0"
scikit-learn = ">=1.2.2"
matplotlib = ">=3.7.1"
itables = ">=0.8.0"
streamlit = "^1.29.0"
pytimetk = "^0.2.1"
python-bcb = "^0.2.0"
pylyzer = "^0.0.51"
pmdarima = "^2.0.4"
prophet = "^1.1.5"
gluonts = {extras = ["torch"], version = "^0.14.3"}


[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
notebook = ">=7.0.6"
jupyter-lsp = ">=2.2.1"
black= ">=23.12.1"
pyright= ">=1.1.342"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
